--- a/ex/WebContent/post.html
+++ b/ex/WebContent/post.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	
-	<form action="PMethod" method="post">
+	<form action="HW" method="post">
 		<input type="submit" value ="post">
 		Æ÷½ºÆ®
 	</form>
